--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 // _variables.scss
 
-$cor-primaria: #ececec;
-$cor-secundaria: #d6d6d6;
+$cor-primaria: hsl(0 0% 100%);
+$cor-secundaria: hsl(0 0% 100%);
 $cor-white: white;
 $cor-text: rgb(10, 10, 10);
 $cor-text-secundaria: rgb(255, 255, 255);
