--- a/src/components/adminComponents/Header/header.scss
+++ b/src/components/adminComponents/Header/header.scss
@@ -2,9 +2,14 @@
 
 .header23{
     display: hidden;
+    position: relative;
+    width: 100%;
+    z-index: 999;
+    
     background-color: $cor-primaria;
     height: 5rem;
     padding: 0rem 3rem ;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);;
     //box-shadow: 1rem black;
 
     .content{
