--- a/src/components/basicosComponents/Modal/modal.scss
+++ b/src/components/basicosComponents/Modal/modal.scss
@@ -1,37 +1,47 @@
 @import '../../../styles/variables';
 
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 100;
-    background: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+  position:fixed; /* Altere de "absolute" para "fixed" */
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.372);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99999; /* Adicione um índice Z alto para cobrir o conteúdo */
+
   .modal {
     background-color: $cor-primaria;
-    padding: 20px;
+    padding: 15px;
+    padding-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    position: relative; /* Importante para posicionar o botão de acordo com este elemento */
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+    position: relative;
 
     .close-button {
       position: absolute;
-      top: 0px;
-      right: 0px;
+      top: 5px; /* Ajuste o valor conforme necessário */
+      right: 10px; /* Ajuste o valor conforme necessário */
       background: none;
       border: none;
       cursor: pointer;
 
-      .icon{
+      .icon {
         font-size: 2rem;
       }
     }
   }
-  
-  
+}
+
+@media (max-width: 1025px) {
+  .modal {
+    max-width: 95%;
+ 
+  } 
+}
